extends Control


func _on_play_button_down() -> void:
	pass # Replace with function body.


func _on_umas_button_down() -> void:
	pass # Replace with function body.


func _on_settings_button_down() -> void:
	pass # Replace with function body.


func _on_shop_button_down() -> void:
	pass # Replace with function body.

func _on_exit_button_down() -> void:
	get_tree().quit()
